Updates module handle

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "barrelstrength/sprout-base-import",
   "description": "Common import libraries for Sprout Plugins for Craft CMS",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "type": "yii-module",
   "license": "proprietary",
   "authors": [
